# learning

design_patterns_python/: pyproject.toml
design_patterns_python/src/01_revisao_poo/: aula03.py  aula04.py
design_patterns_python/src/02_singleton/: lazy_singleton.py  metaclasses.py  meu_modulo.py  monostate.py  padrao_singleton.py  projeto01_singleton.py  projeto02_singleton.py  singleton_metaclasses.py  singleton_modulos.py
design_patterns_python/src/03_factory/: abstract_factory.py  factory_method.py  simple_factory.py
design_patterns_python/src/04_facade/: padrao_facade.py
design_patterns_python/src/05_proxy/: proxy01.py  proxy02.py
design_patterns_python/src/06_observer/: obs01.py  obs02.py
design_patterns_python/src/07_command/: cmd01.py  cmd02.py  cmd03.py
design_patterns_python/src/08_template_method/: tm01.py  tm02.py  tm03.py
design_patterns_python/src/09_mvc/: mvc01.py
design_patterns_python/src/09_mvc/mvc/: db.py  geek.university  main.py  pyproject.toml  requirements.txt
design_patterns_python/src/09_mvc/mvc/controllers/: produto_controller.py
design_patterns_python/src/09_mvc/mvc/models/: produto_model.py
design_patterns_python/src/09_mvc/mvc/views/: base.html  index.html  novo.html
design_patterns_python/src/10_state/: ps01.py  ps02.py
design_patterns_python/src/revisao_poo/: aula02.py
nodejs/2708-node-lib-md/: index.js  package.json
ocr/: OCR_com_Python_e_Tesseract.ipynb
react-native/meuapp/: App.js  App_1.js  package-lock.json  package.json
streamlit/: pyproject.toml
testes/ex01/: .coverage  teste_pytest.py
(+12 files in other folders)
